--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "antd": "^5.24.3",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
